Fix speakers-box alignment

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -291,6 +291,8 @@ div.error + table {
 
 .speakers-box {
       border-top: 8px solid #F6AB6F;
+      width: 100%
+      margin: 0 auto;
   }
 
 .speakers {
